# Tier2_Backend_python_fastapi_sentry_pydantic

./: .env_sample.txt  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: users.py
app/core/: config.py
app/models/: user.py
scripts/: setup-mac.sh  setup-windows.bat
tests/api/: test_users.py
tests/unit/: test_config.py
